--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "concurrently": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://evernote-oqbj.onrender.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
